Fixed scrollbar issues

--- a/vue-client/src/styles/_tempest.scss
+++ b/vue-client/src/styles/_tempest.scss
@@ -6,11 +6,14 @@ $footer-padding: 1vh 1.5rem 1vh;
 $footer-background-color: $theme-isabelline;
 $label-color: $theme-deep-space-sparkle;
 
+@import '~bulma';
+@import '~buefy/src/scss/buefy';
 
 // Standard project styling
+html {
+  overflow-y: auto;
+}
+
 body {
   background: $theme-isabelline;
 }
-
-@import '~bulma';
-@import '~buefy/src/scss/buefy';
